@@ -237,3 +237,5 @@ Version 1.7.3
 * Fixed RubyString#unpack Directive H,h,B,b bugs
 
 * Modified RubyKernel#p behavior toward primitive arrays
+
+* Changed RubyArray#copyOf(List) to RubyArray#copyOf(Iterable)
